# mcp-github-server-plus

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cover_plan.md  fastmcp.md  global.d.ts  implementation-order.md  llms-full.txt  mcp_python.md  package-lock.json  package.json  plan.md  pyproject.toml  pytest.ini  run-server.sh  tsconfig.json
docs/: ajuste.md
docs/pygithub/: auth.md
src/: index.ts  test.ts
src/mcp_pygithub/: __init__.py  __main__.py
src/mcp_pygithub/common/: __init__.py  auth.py  errors.py  types.py  utils.py
src/mcp_pygithub/operations/: __init__.py  actions.py  branches.py  commits.py  files.py  issues.py  pulls.py  repository.py  search.py
src/mcp_pygithub/tools/: __init__.py  actions_tools.py  branches_tools.py  commits_tools.py  common.py  files_tools.py  issues_tools.py  pulls_tools.py  repository_tools.py  search_tools.py
src/mpc_github_python/: __init__.py  __main__.py
src/mpc_github_python/common/: errors.py  types.py  utils.py
src/mpc_github_python/operations/: __init__.py  actions.py  branches.py  files.py  issues.py  pulls.py  repository.py  search.py
src/mpc_github_python/server/: __init__.py  app.py  handlers.py
src/operations/: actions.ts
tests/: __init__.py  conftest.py  test_actions.py  test_auth.py  test_branches.py  test_commits.py  test_files.py  test_files_extra.py  test_issues.py  test_pulls.py  test_repository.py  test_repository_coverage.py  test_search.py  test_server.py  test_utils.py
